--- a/css/VTable.css
+++ b/css/VTable.css
@@ -5,25 +5,45 @@ table {
 	border-collapse: collapse;
 }
 
-.z-table-mod {
+.v-table-mod {
+	width: 100%;
+	height: 100%;
 	position: relative;
 	z-index: 1;
 	overflow: hidden;
 	background: #fff;
 }
 .v-table-body {
-	overflow: auto;
 	position: absolute;
-	top: 100px;
+	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	z-index: 10;
+	z-index: 5;
 }
 
-th,
-td {
+.vtable-fixed-left-mod {
+	float: left;
+	height: 100%;
+	overflow: auto;
+}
+.v-table-content {
+	height: 100%;
+	overflow: hidden;
+}
+.v-table-inner {
+	height: 100%;
+	width: 100%;
+	overflow: auto;
+}
+
+.v-table-mod th,
+.v-table-mod td {
 	border: 1px solid #eee;
+}
+
+.v-table-mod th {
+	background-color: #f5f5f5;
 }
 
 .v-table-header {
