--- a/src/VTable.css
+++ b/src/VTable.css
@@ -1,10 +1,5 @@
 @charset 'utf-8';
 
-table {
-	background: #fff;
-	border-collapse: collapse;
-}
-
 .v-table-mod {
 	width: 100%;
 	height: 100%;
@@ -13,6 +8,11 @@ table {
 	overflow: hidden;
 	background: #fff;
 }
+
+.v-table-mod table {
+	border-collapse: collapse;
+}
+
 .v-table-body {
 	position: absolute;
 	top: 0;
