--- a/src/VTable.css
+++ b/src/VTable.css
@@ -10,6 +10,7 @@
 }
 
 .v-table-mod table {
+	table-layout: fixed;
 	border-collapse: collapse;
 }
 
@@ -25,7 +26,9 @@
 .vtable-fixed-left-mod {
 	float: left;
 	height: 100%;
-	overflow: auto;
+	overflow-y: auto;
+	overflow-x: scroll;
+	overflow: overlay;
 }
 .v-table-content {
 	height: 100%;
@@ -48,6 +51,7 @@
 }
 
 .v-table-header {
+	background-color: #f5f5f5;
 	overflow: hidden;
 }
 
@@ -56,4 +60,29 @@
 	white-space: normal;
 	word-break: break-all;
 	box-sizing: border-box;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+
+/*定义滚动条整体大小*/
+.v-table-inner::-webkit-scrollbar,
+.vtable-fixed-left-mod::-webkit-scrollbar {
+	width: 3px;
+	height: 3px;
+}
+/*主样式*/
+.v-table-inner::-webkit-scrollbar-track-piece,
+.vtable-fixed-left-mod::-webkit-scrollbar-track-piece {
+	background-color:  rgba(0, 0, 0, .1);
+}
+/*滑块*/
+.v-table-inner::-webkit-scrollbar-thumb,
+.vtable-fixed-left-mod::-webkit-scrollbar-thumb {
+	background-color: rgba(0, 0, 0, .4);;
+}
+/* 窗口失去焦点时 */
+.v-table-inner::-webkit-scrollbar-thumb:window-inactive,
+.vtable-fixed-left-mod::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(0, 0, 0, .15);
 }
